--- a/lib/mail_view/email.html.erb
+++ b/lib/mail_view/email.html.erb
@@ -50,11 +50,11 @@
 <div id="message_headers">
   <dl>
     <dt>From:</dt>
-    <dd><%= mail.from %></dd>
+    <dd><%= helper.escape_html(from) %></dd>
 
-    <% if mail.reply_to %>
+    <% if reply_to %>
       <dt>Reply-To:</dt>
-      <dd><%= mail.reply_to %></dd>
+      <dd><%= helper.escape_html(reply_to) %></dd>
     <% end %>
 
     <dt>Subject:</dt>
@@ -64,7 +64,7 @@
     <dd><%= Time.now.strftime("%b %e, %Y %I:%M:%S %p %Z") %></dd>
 
     <dt>To:</dt>
-    <dd><%= mail.to %></dd>
+    <dd><%= helper.escape_html(to) %></dd>
   </dl>
 
   <% if mail.multipart? %>
